--- a/guide-limite-2025.html
+++ b/guide-limite-2025.html
@@ -18,8 +18,7 @@
     Connaître les limites de caractères est devenu essentiel pour réussir sa communication sur les réseaux sociaux et optimiser son SEO. Que ce soit pour un tweet, une description YouTube ou une meta description Google, respecter ces contraintes maximise votre visibilité, votre engagement et votre référencement.
   </p>
   <p class="mt-4 leading-relaxed">
-    Pour vous aider à compter rapidement et précisément, n’hésitez pas à tester notre outil gratuit et sans publicité : 
-    <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">compteur-de-caractere.fr</a>.
+    Pour vous aider à compter rapidement et précisément, n’hésitez pas à tester <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">notre outil gratuit et sans publicité</a>.
   </p>
   <h2 class="text-lg font-semibold mt-6">Limites de caractères sur les réseaux sociaux majeurs</h2>
   <div class="overflow-x-auto mt-2">
@@ -91,11 +90,7 @@
   </ul>
 
   <h2 class="text-lg font-semibold mt-6">Conseils pratiques pour bien gérer la longueur</h2>
-  <p>
-    Pour compter vos caractères en un instant, utilisez 
-    <a href="https://compteur-de-caractere.fr" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">notre outil gratuit en ligne</a>. Il vous aidera à respecter précisément les limites, sans aucune pub ni inscription.
-  </p>
-  <p class="mt-2 leading-relaxed">Voici quelques astuces pour condenser un message sans perdre son sens :</p>
+  <p class="leading-relaxed">Voici quelques astuces pour condenser un message sans perdre son sens :</p>
   <ul class="list-disc list-inside">
     <li>Supprimez les mots inutiles ou redondants</li>
     <li>Utilisez des synonymes plus courts</li>
@@ -130,6 +125,12 @@
       </div>
     </div>
   </footer>
-
+  
+<script>
+        window.onbeforeunload = function () {
+        window.scrollTo(0, 0);
+      }    
+</script>
+  
 </body>
 </html>
