--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 <nav class="bg-white fixed w-full z-20 top-0 start-0 border-b border-gray-200">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="logo.jpg" class="h-8" alt="Compteur de caractère Logo">
-      <span class="self-center text-2xl font-semibold whitespace-nowrap text-gray-900">Compteur de caractère</span>
+      <img src="logo.jpg" class="h-8" alt="Compteur de caractère - Logo">
     </a>
     <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-      <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Compteur de caractère</button>
+      <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Tester le compteur !</button>
       <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-sticky" aria-expanded="false">
         <span class="sr-only">Ouvrir le menu</span>
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
@@ -189,7 +188,17 @@
       document.execCommand("copy");
       window.getSelection().removeAllRanges();
     }
-      
+
+  document.addEventListener("DOMContentLoaded", function () {
+    const toggleBtn = document.querySelector('[data-collapse-toggle]');
+    const menu = document.getElementById(toggleBtn.getAttribute('data-collapse-toggle'));
+
+    toggleBtn.addEventListener('click', () => {
+      menu.classList.toggle('hidden');
+    });
+  });
+
+    
       window.onbeforeunload = function () {
         window.scrollTo(0, 0);
       }    
