--- a/guide-complet-limites.html
+++ b/guide-complet-limites.html
@@ -56,8 +56,8 @@
         <tr>
           <th class="px-4 py-3 border border-gray-300 text-left font-semibold">Plateforme</th>
           <th class="px-4 py-3 border border-gray-300 text-left font-semibold">Type de contenu</th>
-          <th class="px-4 py-3 border border-gray-300 text-left font-semibold">Limite 2025</th>
-          <th class="px-4 py-3 border border-gray-300 text-left font-semibold">Notes importantes</th>
+          <th class="px-4 py-3 border border-gray-300 text-left font-semibold">Limite</th>
+          <th class="px-4 py-3 border border-gray-300 text-left font-semibold">Note</th>
         </tr>
       </thead>
       <tbody>
@@ -131,12 +131,6 @@
     <a href="https://hemingwayapp.com/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">Hemingway</a> pour améliorer la clarté ou 
     <a href="https://www.grammarly.com/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-semibold">Grammarly</a> pour corriger la grammaire.
   </p>
-
-  <h2 class="text-lg font-semibold mt-6">Téléchargez la checklist PDF gratuite</h2>
-  <p>Pour garder sous la main les limites clés de chaque plateforme, téléchargez notre checklist synthétique et pratique :</p>
-  <a href="/checklist-limites-caracteres-2025.pdf" target="_blank" rel="noopener noreferrer" class="mt-4 inline-block bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 transition">
-    Télécharger la checklist PDF
-  </a>
 
   <h2 class="text-lg font-semibold mt-6">Conclusion</h2>
   <p class="leading-relaxed">
